# fa24-cs280a-final-proj

./: README.md  pyproject.toml
scripts/: run_viewer.py
viewer/: autocam_tab.py  viewer.py
