[project]
name = "autocam"
version = "0.1"
description = "Automatic camera path generation"
requires-python = ">=3.8.0"

dependencies=[
    "nerfstudio==1.1.4",
    "torch==2.1.2",
    "torchvision==0.16.2",
]

[tool.setuptools]
packages = ["autocam"]

[project.scripts]
ns-viewer-autocam = "autocam.scripts.run_viewer:entrypoint"